--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -293,15 +293,6 @@ Publisher: American Meteorological Society},
 	pages = {865--881},
 }
 
-@article{simon_spatiotemporal_2023,
-	title = {Spatiotemporal variability of extreme precipitation events and associated atmospheric processes over {Dronning} {Maud} {Land}, {East} {Antarctica}},
-	url = {https://doi.org/10.22541%2Fessoar.168121508.85938968%2Fv1},
-	doi = {10.22541/essoar.168121508.85938968/v1},
-	author = {Simon, Sibin and Turner, John and Thamban, Meloth and Wille, Jonathan and Deb, Pranab},
-	month = apr,
-	year = {2023},
-	note = {Publisher: Authorea, Inc.},
-}
 
 @article{pohl_atmospheric_2022,
 	title = {Atmospheric {Rivers} and {Weather} {Types} in {Aotearoa} {New} {Zealand}: a two-way story},
@@ -498,22 +489,22 @@ Publisher: American Meteorological Society},
 }
 
 
-@article{wille_examining_2024,
-	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
+@article{simon_spatiotemporal_2024,
+	title = {Spatiotemporal {Variability} of {Extreme} {Precipitation} {Events} and {Associated} {Atmospheric} {Processes} {Over} {Dronning} {Maud} {Land}, {East} {Antarctica}},
 	volume = {129},
 	issn = {2169-897X},
-	url = {https://doi.org/10.1029/2023JD039970},
-	doi = {10.1029/2023JD039970},
-	abstract = {Abstract During atmospheric river (AR) landfalls on the Antarctic ice sheet, the high waviness of the circumpolar polar jet stream allows for subtropical air masses to be advected toward the Antarctic coastline. These rare but high-impact AR events are highly consequential for the Antarctic mass balance; yet little is known about the various atmospheric dynamical components determining their life cycle. By using an AR detection algorithm to retrieve AR landfalls at Dumont d'Urville and non-AR analogs based on 700 hPa geopotential height, we examined what makes AR landfalls unique and studied the complete life cycle of ARs reaching Dumont d'Urville. ARs form in the mid-latitudes/subtropics in areas of high surface evaporation, likely in response to tropical deep convection anomalies. These convection anomalies likely lead to Rossby wave trains that help amplify the upper-tropospheric flow pattern. As the AR approaches Antarctica, condensation of isentropically lifted moisture causes latent heat release that?in conjunction with poleward warm air advection?induces geopotential height rises and anticyclonic upper-level potential vorticity tendencies downstream. As evidenced by a blocking index, these tendencies lead to enhanced ridging/blocking that persist beyond the AR landfall time, sustaining warm air advection onto the ice sheet. Finally, we demonstrate a connection between tropopause polar vortices and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR analogs reveal that the amplified jet pattern observed during AR landfalls is a result of enhanced poleward moisture transport and associated diabatic heating which is likely impossible to replicate without strong moisture transport.},
-	number = {8},
-	urldate = {2024-04-22},
+	url = {https://doi.org/10.1029/2023JD038993},
+	doi = {10.1029/2023JD038993},
+	abstract = {Abstract We investigate the spatial and temporal variability of extreme precipitation events (EPEs) in the Dronning Maud Land (DML) sector of Antarctica using high-resolution ECMWF ERA5 reanalysis data. This study examines the spatial occurrence of EPEs across DML, focusing particularly on six locations spanning the coastal and interior parts of the area. The largest snowfall amounts are usually found on eastward-facing slopes in the coastal zone. EPEs occur predominantly in north-easterly to easterly flows, leading to enhanced precipitation on the windward side of the orographic features with a steep gradient. Wind during EPEs was found to be more directionally consistent in the coastal area than in the interior. An east-west couplet of a mid-tropospheric ridge and low-pressure center is essential for steering warm moist maritime airmasses into the DML region before EPEs. Approximately 40\% of EPEs result from atmospheric rivers (ARs), narrow bands of moist air originating at subtropical latitudes, which provide the greatest daily precipitation amounts. From 1979 to 2018, much of the DML experienced a statistically significant (p {\textless} 0.05) increase in the number of EPEs per year, along with increased precipitation from the EPEs. These trends were associated with significant changes in moisture availability and poleward meridional winds in the Atlantic sector of the Southern Ocean. The inter-annual variability in the number of EPEs is primarily dictated by regional atmospheric variability, while the influence of the Southern Oscillation Index and Southern Annular Mode is limited.},
+	number = {7},
+	urldate = {2024-04-02},
 	journal = {Journal of Geophysical Research: Atmospheres},
-	author = {Wille, Jonathan D. and Pohl, Benjamin and Favier, Vincent and Winters, Andrew C. and Baiman, Rebecca and Cavallo, Steven M. and Leroy-Dos Santos, Christophe and Clem, Kyle and Udy, Danielle G. and Vance, Tessa R. and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
+	author = {Simon, Sibin and Turner, John and Thamban, Meloth and Wille, Jonathan D. and Deb, Pranab},
 	month = apr,
 	year = {2024},
 	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {atmospheric blocking, Antarctica, atmospheric rivers, diabatic processes, atmospheric dynamics},
-	pages = {e2023JD039970},
+	keywords = {atmospheric rivers, blocking anticyclones, Dronning Maud Land, extreme precipitation events},
+	pages = {e2023JD038993},
 }
 
 
