--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -508,3 +508,209 @@ Publisher: American Meteorological Society},
 }
 
 
+@article{baiman_synoptic_2024,
+	title = {Synoptic and planetary-scale dynamics modulate antarctic atmospheric river precipitation intensity},
+	volume = {5},
+	issn = {2662-4435},
+	url = {https://doi.org/10.1038/s43247-024-01307-9},
+	doi = {10.1038/s43247-024-01307-9},
+	abstract = {Although rare, atmospheric rivers substantially influence the interannual variability of Antarctic surface mass balance. Here we use MERRA-2 reanalysis to identify characteristics unique to atmospheric river environments by comparing (1) Analog (environments that feature high-low pressure couplets, similar to Atmospheric River environments, but no Atmospheric River), (2) Atmospheric River, and (3) Top Atmospheric River (highest precipitation) timesteps during 1980–2019 around Antarctica. We find significant differences between Atmospheric River and Analog environments including more intense and poleward-shifted mid-tropospheric geopotential height couplets as well as larger atmospheric moisture anomalies. We find similar significant enhancement in synoptic-scale dynamic drivers of Top Atmospheric Rivers compared to all Atmospheric River environments, but no significant difference in local integrated water vapor anomalies. Instead, our results highlight the importance of large-scale dynamic drivers during Top Atmospheric River timesteps, including amplified Rossby waves excited by tropical convection.},
+	number = {1},
+	journal = {Communications Earth \& Environment},
+	author = {Baiman, Rebecca and Winters, Andrew C. and Pohl, Benjamin and Favier, Vincent and Wille, Jonathan D. and Clem, Kyle R.},
+	month = mar,
+	year = {2024},
+	pages = {127},
+}
+
+@article{simon_spatiotemporal_2024,
+	title = {Spatiotemporal {Variability} of {Extreme} {Precipitation} {Events} and {Associated} {Atmospheric} {Processes} {Over} {Dronning} {Maud} {Land}, {East} {Antarctica}},
+	volume = {129},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2023JD038993},
+	doi = {10.1029/2023JD038993},
+	abstract = {Abstract We investigate the spatial and temporal variability of extreme precipitation events (EPEs) in the Dronning Maud Land (DML) sector of Antarctica using high-resolution ECMWF ERA5 reanalysis data. This study examines the spatial occurrence of EPEs across DML, focusing particularly on six locations spanning the coastal and interior parts of the area. The largest snowfall amounts are usually found on eastward-facing slopes in the coastal zone. EPEs occur predominantly in north-easterly to easterly flows, leading to enhanced precipitation on the windward side of the orographic features with a steep gradient. Wind during EPEs was found to be more directionally consistent in the coastal area than in the interior. An east-west couplet of a mid-tropospheric ridge and low-pressure center is essential for steering warm moist maritime airmasses into the DML region before EPEs. Approximately 40\% of EPEs result from atmospheric rivers (ARs), narrow bands of moist air originating at subtropical latitudes, which provide the greatest daily precipitation amounts. From 1979 to 2018, much of the DML experienced a statistically significant (p {\textless} 0.05) increase in the number of EPEs per year, along with increased precipitation from the EPEs. These trends were associated with significant changes in moisture availability and poleward meridional winds in the Atlantic sector of the Southern Ocean. The inter-annual variability in the number of EPEs is primarily dictated by regional atmospheric variability, while the influence of the Southern Oscillation Index and Southern Annular Mode is limited.},
+	number = {7},
+	urldate = {2024-04-02},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Simon, Sibin and Turner, John and Thamban, Meloth and Wille, Jonathan D. and Deb, Pranab},
+	month = apr,
+	year = {2024},
+	keywords = {atmospheric rivers, blocking anticyclones, Dronning Maud Land, extreme precipitation events},
+	pages = {e2023JD038993},
+}
+
+@article{wille_examining_2024,
+	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
+	volume = {129},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2023JD039970},
+	doi = {10.1029/2023JD039970},
+	abstract = {Abstract During atmospheric river (AR) landfalls on the Antarctic ice sheet, the high waviness of the circumpolar polar jet stream allows for subtropical air masses to be advected toward the Antarctic coastline. These rare but high-impact AR events are highly consequential for the Antarctic mass balance; yet little is known about the various atmospheric dynamical components determining their life cycle. By using an AR detection algorithm to retrieve AR landfalls at Dumont d'Urville and non-AR analogs based on 700 hPa geopotential height, we examined what makes AR landfalls unique and studied the complete life cycle of ARs reaching Dumont d'Urville. ARs form in the mid-latitudes/subtropics in areas of high surface evaporation, likely in response to tropical deep convection anomalies. These convection anomalies likely lead to Rossby wave trains that help amplify the upper-tropospheric flow pattern. As the AR approaches Antarctica, condensation of isentropically lifted moisture causes latent heat release that?in conjunction with poleward warm air advection?induces geopotential height rises and anticyclonic upper-level potential vorticity tendencies downstream. As evidenced by a blocking index, these tendencies lead to enhanced ridging/blocking that persist beyond the AR landfall time, sustaining warm air advection onto the ice sheet. Finally, we demonstrate a connection between tropopause polar vortices and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR analogs reveal that the amplified jet pattern observed during AR landfalls is a result of enhanced poleward moisture transport and associated diabatic heating which is likely impossible to replicate without strong moisture transport.},
+	number = {8},
+	urldate = {2024-04-22},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Wille, Jonathan D. and Pohl, Benjamin and Favier, Vincent and Winters, Andrew C. and Baiman, Rebecca and Cavallo, Steven M. and Leroy-Dos Santos, Christophe and Clem, Kyle and Udy, Danielle G. and Vance, Tessa R. and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
+	month = apr,
+	year = {2024},
+	keywords = {atmospheric rivers, Antarctica, atmospheric blocking, diabatic processes, atmospheric dynamics},
+	pages = {e2023JD039970},
+}
+
+@article{rush_atmospheric_2025,
+	title = {Atmospheric {River} {Detection} {Under} {Changing} {Seasonality} and {Mean}-{State} {Climate}: {ARTMIP} {Tier} 2 {Paleoclimate} {Experiments}},
+	volume = {130},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2024JD042222},
+	doi = {10.1029/2024JD042222},
+	abstract = {Abstract Atmospheric rivers (ARs) are filamentary structures within the atmosphere that account for a substantial portion of poleward moisture transport and play an important role in Earth's hydroclimate. However, there is no one quantitative definition for what constitutes an atmospheric river, leading to uncertainty in quantifying how these systems respond to global change. This study seeks to better understand how different AR detection tools (ARDTs) respond to changes in climate states utilizing single-forcing climate model experiments under the aegis of the Atmospheric River Tracking Method Intercomparison Project (ARTMIP). We compare a simulation with an early Holocene orbital configuration and another with CO2 levels of the Last Glacial Maximum to a preindustrial control simulation to test how the ARDTs respond to changes in seasonality and mean climate state, respectively. We find good agreement among the algorithms in the AR response to the changing orbital configuration, with a poleward shift in AR frequency that tracks seasonal poleward shifts in atmospheric water vapor and zonal winds. In the low CO2 simulation, the algorithms generally agree on the sign of AR changes, but there is substantial spread in their magnitude, indicating that mean-state changes lead to larger uncertainty. This disagreement likely arises primarily from differences between algorithms in their thresholds for water vapor and its transport used for identifying ARs. These findings warrant caution in ARDT selection for paleoclimate and climate change studies in which there is a change to the mean climate state, as ARDT selection contributes substantial uncertainty in such cases.},
+	number = {1},
+	urldate = {2025-01-02},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Rush, W. D. and Lora, J. M. and Skinner, C. B. and Menemenlis, S. A. and Shields, C. A. and Ullrich, P. and O’Brien, T. A. and Brands, S. and Guan, B. and Mattingly, K. S. and McClenny, E. and Nardi, K. and Nellikkattil, A. and Ramos, A. M. and Reid, K. J. and Shearer, E. and Tomé, R. and Wille, J. D. and Leung, L. R. and Ralph, F. M. and Rutz, J. J. and Wehner, M. and Zhang, Z. and Lu, M. and Quagraine, K. T.},
+	month = jan,
+	year = {2025},
+	keywords = {atmospheric rivers, ARTMIP, Holocene, IVT, last glacial maximum, paleoclimate},
+	pages = {e2024JD042222},
+}
+
+@article{maclennan_rising_2025,
+	title = {Rising atmospheric moisture escalates the future impact of atmospheric rivers in the {Antarctic} climate system},
+	volume = {6},
+	issn = {2662-4435},
+	url = {https://doi.org/10.1038/s43247-025-02333-x},
+	doi = {10.1038/s43247-025-02333-x},
+	abstract = {Despite their relative rarity, atmospheric rivers are key contributors to the surface mass balance of Antarctica. However, the future role of atmospheric rivers in modulating Antarctic sea-level contributions is a major area of uncertainty. Here, we leverage high-resolution climate simulations to show that Antarctic atmospheric rivers are highly sensitive to future increases in atmospheric moisture, leading to a doubling of atmospheric river frequencies and 2.5 × increase in precipitation from 2066–2100 under present-day thresholds for atmospheric river detection. However, future precipitation impacts are critically dependent on the detection threshold: accounting for moisture increases in the threshold produces smaller, regional changes in atmospheric river frequency, primarily resulting from an eastward shift in the polar jet maximum wind speeds. Our results underscore the importance of using large ensembles to quantify Antarctic atmospheric river responses to variability in projected moisture, which may not be captured when using only a few ensemble members.},
+	number = {1},
+	journal = {Communications Earth \& Environment},
+	author = {Maclennan, Michelle L. and Winters, Andrew C. and Shields, Christine A. and Thaker, Rudradutt and Barthelemy, Léonard and Codron, Francis and Wille, Jonathan D.},
+	month = may,
+	year = {2025},
+	pages = {369},
+}
+
+@article{wille_extreme_2025,
+	title = {Extreme {Precipitation} {Depiction} in {Convection}-{Permitting} {Earth} {System} {Models} {Within} the {nextGEMS} {Project}},
+	volume = {17},
+	url = {https://doi.org/10.1029/2024MS004840},
+	doi = {10.1029/2024MS004840},
+	abstract = {Abstract As extreme precipitation events become more frequent and intense, local-scale climate services are increasingly needed to help communities adapt. We here evaluate two fully coupled convection-permitting Earth System Models for their ability to resolve mesoscale extreme weather events. Using the Integrated Forecasting System (IFS) and Icosahedral Nonhydrostatic Weather and Climate Model (ICON) within the Next Generation Earth Modeling Systems (nextGEMS) project, we evaluate their depiction of extreme precipitation with a focus on the Mediterranean region through a comparison with high resolution reanalysis, gridded observations, a regional climate model, and two lower-resolution climate models. The results are then compared at a common, coarser resolution globally. For dry extremes, we find that the higher resolution and hybrid/explicit representation of convection of the nextGEMS models improve the representation of dry day fraction over land by about 5\%?7\% points. Generally, the nextGEMS models concentrate dry spells into limited frequency yet overly long periods, although the lack of convection parameterization in ICON reduces maximum annual dry spell length over land by 45 days compared to a lower-resolution model version. For wet extremes, the nextGEMS models properly high intensities of heavy precipitation, aside from overestimation in ICON over mountainous terrain. ICON, with no convection scheme, tends to create overly intense, small, convective cells that are triggered without moisture convergence. Overall, the depiction of wet and dry precipitation extremes in the Mediterranean region are representative of the nextGEMS' models performance across the global mid-latitudes demonstrating the models' value in simulating extreme weather systems.},
+	number = {7},
+	urldate = {2025-07-15},
+	journal = {Journal of Advances in Modeling Earth Systems},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Wille, Jonathan D. and Koch, Rebekka and Becker, Tobias and Fischer, Erich},
+	month = jul,
+	year = {2025},
+	keywords = {climate modeling, extreme weather, convection-permitting models, Earth system modeling},
+	pages = {e2024MS004840},
+}
+
+@article{raphael_antarctica_2025,
+	title = {Antarctica and the {Southern} {Ocean}},
+	volume = {106},
+	url = {https://journals.ametsoc.org/view/journals/bams/106/8/BAMS-D-25-0087.1.xml},
+	doi = {10.1175/BAMS-D-25-0087.1},
+	number = {8},
+	journal = {Bulletin of the American Meteorological Society},
+	publisher = {American Meteorological Society},
+	author = {Raphael, M. N. and Clem, K. R. and Adjou, Mohamed and Adusumilli, Susheel and Amory, Charles and Bahrami, Mahsa and Baiman, Rebecca and Banwell, Alison F. and Barreira, Sandra and Beadling, Rebecca L. and Colwell, Steve and Coy, Lawrence and Datta, Rajashree T. and Laat, Jos De and Plessis, Marcel du and Fogt, Ryan L. and Fricker, Helen A. and Hancock, Alyce M. and Johnson, Bryan and Josey, Simon A. and Keller, Linda M. and Kittel, Christoph and Kramarova, Natalya A. and Lait, Leslie R. and Lazzara, Matthew A. and Lieser, Jan L. and MacFerrin, Michael and MacLennan, Michelle L. and Massom, Robert A. and Mikolajczyk, David E. and Milward, James and Mote, Thomas L. and Newman, Paul A. and Norton, Taylor and Petropavlovskikh, Irina and Pezzi, Luciano P. and Reid, Phillip and Ryan-Keogh, Thomas J. and Santee, Michelle L. and Scambos, Theodore and Schulz, Cristina and Shi, Jia-Rui and Souza, Everaldo and Stammerjohn, Sharon and Thomalla, Sandy and Trusel, Luke and Wille, Jonathan D.},
+	year = {2025},
+	note = {Place: Boston MA, USA},
+	pages = {S357 -- S400},
+}
+
+@article{segura_nextgems_2025,
+	title = {{nextGEMS}: entering the era of kilometer-scale {Earth} system modeling},
+	volume = {18},
+	url = {https://gmd.copernicus.org/articles/18/7735/2025/},
+	doi = {10.5194/gmd-18-7735-2025},
+	number = {20},
+	journal = {Geoscientific Model Development},
+	author = {Segura, H. and Pedruzo-Bagazgoitia, X. and Weiss, P. and Müller, S. K. and Rackow, T. and Lee, J. and Dolores-Tesillos, E. and Benedict, I. and Aengenheyster, M. and Aguridan, R. and Arduini, G. and Baker, A. J. and Bao, J. and Bastin, S. and Baulenas, E. and Becker, T. and Beyer, S. and Bockelmann, H. and Brüggemann, N. and Brunner, L. and Cheedela, S. K. and Das, S. and Denissen, J. and Dragaud, I. and Dziekan, P. and Ekblom, M. and Engels, J. F. and Esch, M. and Forbes, R. and Frauen, C. and Freischem, L. and García-Maroto, D. and Geier, P. and Gierz, P. and González-Cervera, Á. and Grayson, K. and Griffith, M. and Gutjahr, O. and Haak, H. and Hadade, I. and Haslehner, K. and ul Hasson, S. and Hegewald, J. and Kluft, L. and Koldunov, A. and Koldunov, N. and Kölling, T. and Koseki, S. and Kosukhin, S. and Kousal, J. and Kuma, P. and Kumar, A. U. and Li, R. and Maury, N. and Meindl, M. and Milinski, S. and Mogensen, K. and Niraula, B. and Nowak, J. and Praturi, D. S. and Proske, U. and Putrasahan, D. and Redler, R. and Santuy, D. and Sármány, D. and Schnur, R. and Scholz, P. and Sidorenko, D. and Spät, D. and Sützl, B. and Takasuka, D. and Tompkins, A. and Uribe, A. and Valentini, M. and Veerman, M. and Voigt, A. and Warnau, S. and Wachsmann, F. and Wacławczyk, M. and Wedi, N. and Wieners, K.-H. and Wille, J. and Winkler, M. and Wu, Y. and Ziemen, F. and Zimmermann, J. and Bender, F. A.-M. and Bojovic, D. and Bony, S. and Bordoni, S. and Brehmer, P. and Dengler, M. and Dutra, E. and Faye, S. and Fischer, E. and van Heerwaarden, C. and Hohenegger, C. and Järvinen, H. and Jochum, M. and Jung, T. and Jungclaus, J. H. and Keenlyside, N. S. and Klocke, D. and Konow, H. and Klose, M. and Malinowski, S. and Martius, O. and Mauritsen, T. and Mellado, J. P. and Mieslinger, T. and Mohino, E. and Pawłowska, H. and Peters-von Gehlen, K. and Sarré, A. and Sobhani, P. and Stier, P. and Tuppi, L. and Vidale, P. L. and Sandu, I. and Stevens, B.},
+	year = {2025},
+	pages = {7735--7761},
+}
+
+@article{barthelemy_future_2026,
+	title = {Future {Atmospheric} {Rivers} in {Antarctica}: {Characteristics} and {Impacts} {With} the {IPSL} {Model}},
+	volume = {131},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2025JD043398},
+	doi = {10.1029/2025JD043398},
+	abstract = {Abstract Atmospheric rivers (ARs) are narrow corridors of intense water vapor transport that have significant impacts on the Antarctic surface mass balance (SMB) through both snow accumulation and surface melt due to rain and heat. To estimate their impacts on future SMB, we study Antarctic ARs in an ensemble of 21st-century simulations of the IPSL-CM6 model. Although the number of detected ARs continuously increases when using a constant detection threshold based on recent moisture fluxes, it remains stable with an adaptive threshold evolving with the rising background moisture. In addition, ARs penetrate further into Antarctica following a wave-number 3 pattern. The severity of Antarctic ARs, measured by moisture fluxes, is projected to increase following the moisture content given by the Clausius-Clapeyron relation. The corresponding SMB impacts all become larger with both increasing snowfall and coastal surface melt and rainfall. However, their overall influence on the SMB is dominated by the increased snow accumulation related to ARs, which is rising by 17\% at the scale of the continent. This is much larger than the overall increase in snow accumulation from all events combined, which is 9\%, and is more closely related to the rise in total humidity in relation with temperature?that is, linked to the Clausius-Clapeyron relation.},
+	number = {1},
+	urldate = {2026-01-05},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	publisher = {John Wiley \& Sons, Ltd},
+	author = {Barthélemy, L. and Codron, F. and Wille, J. and Favier, V. and Clem, K. R.},
+	month = jan,
+	year = {2026},
+	keywords = {atmospheric rivers, Antarctica, surface mass balance, IPSL-CM6},
+	pages = {e2025JD043398},
+}
+
+@article{francis_drivers_2026,
+	title = {Drivers of observed winter–spring sea-ice and snow thickness at a coastal site in {East} {Antarctica}},
+	volume = {20},
+	url = {https://tc.copernicus.org/articles/20/1/2026/},
+	doi = {10.5194/tc-20-1-2026},
+	number = {1},
+	journal = {The Cryosphere},
+	author = {Francis, D. and Fonseca, R. and Nelli, N. and Heil, P. and Wille, J. D. and Gorodetskaya, I. V. and Massom, R. A.},
+	year = {2026},
+	pages = {1--28},
+}
+
+@article{wille_atmospheric_2025,
+	title = {Atmospheric rivers in {Antarctica}},
+	volume = {6},
+	issn = {2662-138X},
+	url = {https://doi.org/10.1038/s43017-024-00638-7},
+	doi = {10.1038/s43017-024-00638-7},
+	abstract = {Antarctic atmospheric rivers (ARs) are a form of extreme weather that transport heat and moisture from the Southern Hemisphere subtropics and/or mid-latitudes to the Antarctic continent. Present-day AR events generally have a positive influence on the Antarctic ice-sheet mass balance by producing heavy snowfall, yet they also cause melt of sea ice and coastal ice sheet areas, as well as ice shelf destabilization. In this Review, we explore the atmospheric dynamics and impacts of Antarctic ARs over their life cycle to better understand their net contributions to ice-sheet mass balance. ARs occur in high-amplitude pressure couplets, and those strong enough to reach the Antarctic are often formed within Rossby waves initiated by tropical convection. Antarctic ARs are rare events ({\textasciitilde}3 days per year per location) but have been responsible for 50–70\% of extreme snowfall events in East Antarctica since the 1980s. However, they can also trigger extensive surface melting events, such as the final ice shelf collapse of Larsen A in 1995 and Larsen B in 2002. Climate change will likely cause stronger ARs as anthropogenic warming increases atmospheric water vapour. Future research must determine how these climate change impacts will alter the relationship among Antarctic ARs, net ice-sheet mass balance and future sea-level rise.},
+	number = {3},
+	journal = {Nature Reviews Earth \& Environment},
+	author = {Wille, Jonathan D. and Favier, Vincent and Gorodetskaya, Irina V. and Agosta, Cécile and Baiman, Rebecca and Barrett, J. E. and Barthelemy, Léonard and Boza, Burcu and Bozkurt, Deniz and Casado, Mathieu and Chyhareva, Anastasiia and Clem, Kyle R. and Codron, Francis and Datta, Rajashree Tri and Durán-Alarcón, Claudio and Francis, Diana and Hoffman, Andrew O. and Kolbe, Marlen and Krakovska, Svitlana and Linscott, Gabrielle and Maclennan, Michelle L. and Mattingly, Kyle S. and Mu, Ye and Pohl, Benjamin and Santos, Christophe Leroy-Dos and Shields, Christine A. and Toker, Emir and Winters, Andrew C. and Yin, Ziqi and Zou, Xun and Zhang, Chen and Zhang, Zhenhai},
+	month = mar,
+	year = {2025},
+	pages = {178--192},
+}
+
+@article{buffet_curved_2026,
+	title = {Curved atmospheric rivers and their moisture remnants: a new detection tool for {Antarctica}},
+	volume = {2026},
+	url = {https://egusphere.copernicus.org/preprints/2026/egusphere-2025-6365/},
+	doi = {10.5194/egusphere-2025-6365},
+	journal = {EGUsphere},
+	author = {Buffet, V. and Favier, V. and Pohl, B. and Wille, J. D.},
+	year = {2026},
+	pages = {1--32},
+}
+
+@article{dutrievoz_water_2026,
+	title = {Water vapour isotope anomalies during an atmospheric river event at {Dome} {C}, {East} {Antarctica}},
+	volume = {20},
+	url = {https://tc.copernicus.org/articles/20/1025/2026/},
+	doi = {10.5194/tc-20-1025-2026},
+	number = {2},
+	journal = {The Cryosphere},
+	author = {Dutrievoz, N. and Agosta, C. and Davrinche, C. and Landais, A. and Nguyen, S. and Vignon, É. and Ollivier, I. and Leroy-Dos Santos, C. and Fourré, E. and Casado, M. and Wille, J. and Favier, V. and Minster, B. and Prié, F.},
+	year = {2026},
+	pages = {1025--1046},
+}
+
+@article{zou_antarcticas_2026,
+	title = {Antarctica’s uncertain future: global sea-level rise from oceanic and atmospheric forcing, with a focus on atmospheric rivers},
+	volume = {Volume 14 - 2026},
+	issn = {2296-6463},
+	url = {https://www.frontiersin.org/journals/earth-science/articles/10.3389/feart.2026.1761959},
+	doi = {10.3389/feart.2026.1761959},
+	abstract = {Antarctic land ice stores the majority of Earth’s freshwater and carries substantial uncertainties regarding its future contribution to global sea level rise. While ocean processes associated with basal melting currently dominate ice loss, atmospheric forcing could have an increasing future impact, especially with intensified extreme weather events. For instance, atmospheric rivers, which are key drivers of long-distance moisture transport, introduce significant uncertainties to Antarctica’s ice mass balance, as they are capable of causing both intense snowfall and surface melting. They also impact ocean stratification and mixed-layer depth through freshwater input, ultimately affecting air-sea exchange. Associated interactions among components of the Earth system—atmosphere, ocean, and glacier—are not fully captured by global climate models and observations. This paper assesses Antarctica’s future, highlighting uncertainties stemming from limited understanding of atmospheric and oceanic forcings such as atmospheric rivers, and their consequences for projecting sea-level rise-related hazards.},
+	journal = {Frontiers in Earth Science},
+	author = {Zou, Xun and Ralph, F. Martin and Bromwich, David H. and Gille, Sarah T. and Gorodetskaya, Irina V. and Mazloff, Matthew R. and Lubin, Dan and Cerovečki, Ivana and Sun, Rui and Wille, Jonathan D. and Zhang, Zhenhai},
+	year = {2026},
+}
